<resources>
    <string name="app_name">WireFrame</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="new_workout_button">New Workout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title">Fantasy Fitness</string>
    <string name="empty_username_or_password">Please enter your username and password</string>
    <string name="wrong_password">Incorrect password. Please try again.</string>
    <string name="wrong_username_or_password">Incorrect password. Please try again.</string>
    <string name="quest1">Go for a run</string>
    <string name="quest2">Do 10 push ups</string>
    <string name="quest3">5 minutes of meditation</string>
    <string name="quest4">10 minutes of stretching</string>
    <string-array name="workouts">
        <item>Go for a run</item>
        <item>5 minutes of meditation</item>
        <item>10 push ups</item>
        <item>10 minutes of stretching</item>
    </string-array>
</resources>
