<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Logo Image-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            app:srcCompat="@drawable/logo"
            android:background="@android:color/transparent"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Username Input-->
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="16dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!--Password Input-->
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Login Button-->
        <Button
            android:id="@+id/login_button"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_gravity="center"
            android:background="@drawable/capsule_button_60"
            android:text="@string/login_button"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:onClick="goToHome"/>
    </TableRow>

</TableLayout>