<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landscape_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LoginActivity"
    android:background="@color/background_yellow">

    <!-- Image on the left side -->
    <ImageView
        android:id="@+id/left_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_transparent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/form_container"
        app:layout_constraintHorizontal_weight="1"/>

    <!-- Form container on the right side -->
    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_image"
        app:layout_constraintHorizontal_weight="1">

        <!-- Username Field -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="8dp"/>

        <!-- Password Field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capsule_button_60"
            android:text="@string/login_button"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:onClick="goToHome"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>